# socket_stream

./: .gitignore  README.md  client.py  pyproject.toml  server.py  Диаграмма без названия.drawio
src/: main.py
src/app/: flask_app.py
src/core/: .template.env
src/service/: client.py
src/service/socket_server/: interface.py
static/templates/: index.html
